removing overflows to avoid explicit scrolls

--- a/beta/src/styles/sandpack.css
+++ b/beta/src/styles/sandpack.css
@@ -132,7 +132,6 @@ html.dark .sp-tabs .sp-tab-button[data-active='true'] {
   font-size: 13.6px !important;
   line-height: 24px !important;
   height: 100%;
-  overflow: scroll;
 }
 .text-xl .sp-pre-placeholder {
   font-size: 16px !important;
